# swinno-bioeconomy-directionality

./: .gitignore  .pre-commit-config.yaml  20240906-pjk-NEST.qmd  20250409-pjk-CIRCLE.qmd  Makefile  README.md  _appendix-data.qmd  _code_setup.qmd  _decision-matrix.md  env.yml  environment.yml  index.html  index.qmd  irr.ipynb  paper.qmd  pyproject.toml  rename_files.sh  requirements.txt  swinno-bioeconomy-directionality.bib  swinno-shades-green.bib  synopsis.qmd
data/: 221219-export-no-duplicates.csv
docs/: EHCS-session-abstract.md  EHCS-session-abstract.qmd  paper.qmd
experiments/: 02 Lookup Tables.ipynb  04-IRR.ipynb  08-sni-codes-sql.ipynb  09-bv-ei-share.ipynb  11-most_articles.ipynb  12-clean-bv-codes.ipynb  14-plots.qmd  15-vector_space.ipynb  221222-classification-db-prep.ipynb  plot-sectors.ipynb
notebooks/: 02 Lookup Tables.ipynb  04-IRR.ipynb  08-sni-codes-sql.ipynb  09-bv-ei-share.ipynb  10-spacy-keywords.ipynb  11-most_articles.ipynb  12-bv-shares-figure.ipynb  12-clean-bv-codes.ipynb  13-loess-smoothing.ipynb  15-vector_space.ipynb  16-public-funding.ipynb  17-plots_python-tmp.ipynb  enter_classification_to_db.ipynb  irr.ipynb  plot-sectors.ipynb  sanity_check.ipynb  tmp-database-restore.ipynb
notes/: 02-innovation_id_to_source_id.txt  20230911_pjk_missing-sources.txt  230411_bioeconomy_excl_tagged.txt  classification-notes.md  retriever-business-test-org-nr.txt  sinno-id-6000001-7827001.txt  sinno-id-7859001-13017001.txt
papers/: paper1.qmd
scripts/: 01 Filter Bioeconomy.qmd  02 Lookup Tables.html  04-IRR.ipynb  05-articles-db.ipynb  sectors.sql  (+11 more)
(+72 files in other folders)
